Refactor entire agent