@@ -1,22 +1,26 @@
 package com.zebrunner.agent.core.registrar.ci;
 
-import com.zebrunner.agent.core.registrar.domain.CiContextDTO;
-import com.zebrunner.agent.core.registrar.domain.CiType;
 import lombok.AccessLevel;
+import lombok.Getter;
 import lombok.NoArgsConstructor;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-@NoArgsConstructor(access = AccessLevel.PACKAGE)
+import com.zebrunner.agent.core.registrar.domain.CiContext;
+import com.zebrunner.agent.core.registrar.domain.CiType;
+
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 class TeamCityCiContextResolver implements CiContextResolver {
+
+    @Getter
+    private static final TeamCityCiContextResolver instance = new TeamCityCiContextResolver();
 
     // https://www.jetbrains.com/help/teamcity/predefined-build-parameters.html#Server+Build+Properties
     private static final String TEAMCITY_VERSION_ENV_VARIABLE = "TEAMCITY_VERSION";
-    private static final List<String> ENV_VARIABLE_PREFIXES = Arrays.asList(
+    private static final List<String> ENV_VARIABLE_PREFIXES = List.of(
             "BUILD_",
             "HOSTNAME",
             "SERVER_URL",
@@ -24,12 +28,13 @@ class TeamCityCiContextResolver implements CiContextResolver {
     );
 
     @Override
-    public CiContextDTO resolve() {
+    public CiContext resolve() {
         Map<String, String> envVariables = System.getenv();
 
         if (envVariables.containsKey(TEAMCITY_VERSION_ENV_VARIABLE)) {
-            envVariables = collectEnvironmentVariables(envVariables);
-            return new CiContextDTO(CiType.TEAM_CITY, envVariables);
+            envVariables = this.collectEnvironmentVariables(envVariables);
+
+            return new CiContext(CiType.TEAM_CITY, envVariables);
         }
 
         return null;
@@ -38,8 +43,7 @@ class TeamCityCiContextResolver implements CiContextResolver {
     private Map<String, String> collectEnvironmentVariables(Map<String, String> envVariables) {
         return envVariables.keySet()
                            .stream()
-                           .filter(key -> ENV_VARIABLE_PREFIXES.stream()
-                                                               .anyMatch(key::startsWith))
+                           .filter(key -> ENV_VARIABLE_PREFIXES.stream().anyMatch(key::startsWith))
                            .collect(Collectors.toMap(Function.identity(), envVariables::get));
     }
 
